--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>PosiVibes</title>
+    <title>PoSiViBes</title>
     <link rel="shortcut icon" href="img/logo.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -17,21 +17,85 @@
     <div id="navigation-sticky">
 
         <!-- Navigation -->
+        <nav class="navbar bg-light navbar-light navbar-expand-lg sticky-top">
+            <div class="container">
+                <a href="index.html" class="navbar-brand"><img src="img/logo.png" alt="Logo" title="Logo" height="20"></a>
+                
+                <button class="navbar-toggler" type="button" 
+                    data-toggle="collapse" data-target="#navbarResponsive">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Explore</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Resources</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <!-- End Navigation -->
 
         <!-- Image Carousel -->
-
-
+        <div id="carousel" class="carousel slide" data-ride="carousel"
+            data-interval="500000"> <!--5000 = 5 seconds--->
             <!-- Carousel Content -->
+            <div class="carousel-inner">
 
+                <div class="carousel-item active">
+                    <img src="img/carousel1.jpeg" class="w-100" alt="">
+                    <div class="carousel-caption">
+                        <div class="container">
+                            <div class="row justify-content-end">
+                                
+                                <div class="d-none d-md-block col-11-md col-lg-9 col-xl-8 bg-dark text-right">
+                                    <h3 class="pb-3">Subscribe now (filler)</h3>
+                                    <div class="border-top border-white mb-3 w-75 ml-auto"></div>
+                                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quae dolore facilis quos eius blanditiis perferendis nihil, dolores veritatis, eos quisquam? Inventore labore, at fugiat error nihil qui eos provident.
+                                    </p>
+                                    <a href="#" class="btn btn-primary btn-md">Subscribe</a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img src="img/carousel2.jpg" class="w-100" alt="">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="img/carousel3.jpeg" class="w-100" alt="">
+                    <div class="carousel-caption">
+                        <div class="container">
+                            <div class="row">
+
+                                <div class="d-none d-md-block col-md-9 col-lg-7 bg-white text-left text-dark">
+                                    <h3>Lorem ipsum dolor</h3>
+                                    <div class="border-top border-dark my-1 w-75"></div>
+                                    <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio, placeat eveniet. Eum aut ad laborum excepturi aliquam? Est distinctio quos voluptatibus ullam cupiditate nam error consequatur porro explicabo praesentium? Eius?</p>
+                                    <a href="#" class="btn btn-light btn-md">filler</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- End Carousel Content -->
 
             <!-- Carousel Indicators -->
-
+            <ol class="carousel-indicators">
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+                <li data-target="#carousel" data-slide-to="2"></li>
+            </ol>
             <!-- End Carousel Indicators -->
 
-
+        </div>
         <!-- End Image Carousel -->
 
     </div> <!-- End Navigation Sticky ID Section -->
@@ -39,7 +103,21 @@
     <div id="social-media-sticky">
 
         <!-- Start Social Jumbotron -->
+        <div class="jumbotron stick-top">
+            <div class="container">
+                <div class="row justify-content-center text-center">
 
+                    <div class="d-none d-xl-block col-xl-6 pt-1">
+                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                    </div>
+
+                    <div class="col-sm-10 col-md-8 col-lg-7 col-xl-5 pt-1 text-right">
+                        <a href="#" class="btn btn-block btn-outline-danger">Subscribe</a>
+
+
+                </div>
+            </div>
+        </div>
         <!-- End Social Jumbotron -->
 
 
