--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                                     <div class="border-top border-white mb-3 w-75 ml-auto"></div>
                                     <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quae dolore facilis quos eius blanditiis perferendis nihil, dolores veritatis, eos quisquam? Inventore labore, at fugiat error nihil qui eos provident.
                                     </p>
+                                    <!-- <a href="#" class="btn btn-primary btn-md">Subscribe</a> -->
                                     <a href="#" class="btn btn-primary btn-md">Subscribe</a>
                                 </div>
 
@@ -236,7 +237,7 @@
     </div> <!-- End Nav Bar Sticky -->
 
     <!-- border -->
-    <div class="border-top border-dark mb-3 w-100 ml-auto"></div>
+    <!-- <div class="border-top border-dark mb-3 w-100 ml-auto"></div> -->
 
     <!-- Start Two Column Section -->
 
@@ -263,7 +264,7 @@
 
 
     <!-- Start Footer -->
-    <footer class="bg-dark">
+    <footer>
         <div class="container">
             <div class="row justify-content-center text-center text-light">
 
@@ -294,7 +295,6 @@
     </div>
     <!-- End Socket -->
 
-    <div class="space" style="height: 80vh;"></div>
     <!-- Script Source Files -->
 
     <!-- jQuery -->
@@ -305,7 +305,10 @@
     <script src="js/popper.min.js"></script>
     <!-- Font Awesome -->
     <script src="js/all.min.js"></script>
-
+    <!--Javascript file-->
+    <script src="scripts/main.js"></script>
+    <!--Material Library-->
+    <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
     <!-- End Script Source Files -->
 </body>
 </html>
