implement basic layout of the explore page

--- a/about.html
+++ b/about.html
@@ -37,6 +37,9 @@
                                 Resources
                             </a>
                             <div class="dropdown-menu" aria-labelledby="resources_dropdown">
+                                <p class="dropdown-header special_text">
+                                    &#10087;Don't be afraid to reach out <br>
+                                    and seek professional help&#10087;</p>
                                 <a class="dropdown-item">Resources 1</a>
                                 <a class="dropdown-item">Resources 2</a>
                                 <a class="dropdown-item">Resources 3</a>
@@ -67,23 +70,23 @@
                     ABOUT
                 </h1>
             <div class="border-top border-dark w-50 mx-auto">
-                <p class="lead mb-0">Inspiration behind Positivity Hub explained</p>
+                <p class="lead mb-2 mt-1">Inspiration behind Positivity Hub explained</p>
             
             </div>
         </div>
 
         <!-- Start Two Column Section -->
-        <div class="container">
+        <div class="container justify-content-center">
             <h1 class="image-seperator mb-2"></h1>
             <!-- <img src="img/divider.jpg"> -->
-            <div class="row mb-5">
+            <div class="row mb-5 justify-content-center">
                 <!-- <p class="mb-4 text-center">Quarantine is not fun. Cancelled summer plans are not fun. Not being able to see friends and go home to families is not fun. 2020 has been a challenging time for everyone, to say the least. Even though I was lucky enough to have a shelter and be with my family, there have been times when negative emotions just completely overwhelmed me. “This is the unhappiest I’ve ever been”, I remember thinking to myself. So trust me, you are not alone in this if you are feeling the same way. And if you are here, I appreciate your time and I’m proud of you for taking this step to seek help. 
                     <br><br>
                     It wasn’t until a couple weeks ago when I finally learned how to take better care of myself, physically and mentally. I realized that I’ve been so fixated on thinking about “what I could have been doing if I’m not quarantined”, which made me overlook the small but meaningful moments that are happening in my life right now. Instead of mourning over what we lost, let’s take a moment to think about what we can do and find strength and happiness within ourselves. 
                     <br><br>
                     This webpage is dedicated to everyone that is having a hard time adjusting to the new quarantine norm, and it will be worth every bit of my effort if it makes your days a little better!
                     </p> -->
-                <div class="col-lg-4 mb-4 my-lg-auto two-col pb-5">
+                <div class="col-lg-4 mb-4 my-lg-auto two-col pb-5 mx-5 justify-content-center">
                     <p class="mb-3">
                         Being in pandemic is not fun. Cancelling summer plans is not fun. 
                         Not being able to see friends and go home to families is not fun. 
@@ -95,8 +98,7 @@
                         <h4 class="bolded-text special_text text-center mb-3"><b>You are not alone in this &hearts;</b></h4> 
                 </div>
     
-                <div class="col-lg-4 two-col ml-5">
-                    <!-- <img src="img/about.jpg" alt="" class="w-100"> -->
+                <div class="col-lg-4 two-col mx-5 justify-content-center">
                     <p>It wasn’t until a couple weeks ago when I finally got the hang of taking better care of myself,
                      both physically and mentally. I realized that I’ve been so fixated on thinking:  </p>
                      <h5 class="bolded-text special_text text-center mb-3"><b>“ What could I have been doing if I’m not in quarantine ” &#10060;</b></h5>
@@ -128,7 +130,7 @@
             </div>
         </div>
         <p class="text-center">Under Construction... Check back later!</p>
-        <img class="rounded mx-auto d-block" src="img/self_care.jpg" width="500">
+        <img class="rounded mx-auto d-block mb-5" src="img/self_care.jpg" width="500">
     </div>
 
     <!-- Start Footer -->
