--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                                 Resources
                             </a>
                             <div class="dropdown-menu" aria-labelledby="resources_dropdown">
+                                <p class="dropdown-header special_text">
+                                    &#10087;Don't be afraid to reach out <br>
+                                    and seek professional help&#10087;</p>
                                 <a class="dropdown-item">Resources 1</a>
                                 <a class="dropdown-item">Resources 2</a>
                                 <a class="dropdown-item">Resources 3</a>
@@ -91,7 +94,7 @@
                                         You're tired of staying home and doing nothing all day. <br>
                                         You probably miss your friends or your family overseas. 
                                         <br><br>
-                                        Positivity Hub will cheer you up with positive-vibes-only <br>images and quotes &Star; &star; hand picked &star; &Star; for you ☺
+                                        Positivity Hub will cheer you up with positive-vibes-only images and quotes &Star; &star; hand picked &star; &Star; for you ☺
                                         <br><br>
                                         <!-- The Positivity Hub is designed to be a safe space for everyone to explore and find happiness during this difficult time. <br>
                                         Here, we can bounce positive energy off of each other and spread positivity .<br>
@@ -171,11 +174,11 @@
                 <div class="row justify-content-center text-center special_text">
 
                     <div class="d-none d-xl-block col-xl-6 pt-1">
-                        <h3>Subscribe to get your dose of positive energy boost throughout the day </h3>
+                        <h4>Subscribe to get your dose of <br> &Star;positive energy boost&Star; on the daily </h4>
                     </div>
 
                     <div class="col-sm-10 col-md-8 col-lg-7 col-xl-5 pt-1 text-right">
-                        <a href="#" class="btn btn-lg btn-light btn-custom">
+                        <a href="#" class="btn btn-md btn-light btn-custom">
                             Subscribe
                         </a>
                         <!-- <button disabled class="btn btn-block btn-outline-danger btn-custom js-push-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
@@ -218,17 +221,11 @@
             </div>
             <!-- End Bundle Pack Jumbotron -->
 
-        <!-- Three Column Section -->
-
-        <!-- End Three Column Section -->
-    
-        <!-- <div class="border-top border-dark mb-3 w-100 ml-auto"></div> -->
-
     <!-- </div> End Text Button Sticky -->
         <!-- Main Page Heading -->
         <div class="col-12 text-center mt-5 special_text">
             <h1 class="display-4 pt-4 ">
-                    PREVIEW
+                    Content Preview
                 </h1>
             <div class="border-top border-dark w-50 mx-auto my-3">
                 <p class="lead">Check out the different categories of positive-vibe-only remedies available on Positivity Hub!</p>
@@ -242,20 +239,20 @@
 
                 <div class="col-md-6 col-lg-4 py-3">
                     <img class="preview" src="img/preview1.jpg">
-                    <p class="lead">Cute bunny</p>
-                    <a href="#" class="btn btn-outline-dark btn-md">See more</a>
+                    <p class="lead">Morning Greetings from <br> Mr. Stabby and His Cute Friends</p>
+                    <a href="explore.html" class="btn btn-outline-dark btn-md">See more</a>
                 </div>
 
                 <div class="col-md-6 col-lg-4 py-3">
                     <img class="preview" src="img/preview2.jpg">
-                    <p class="lead">Positive vibes</p>
-                    <a href="#" class="btn btn-outline-dark btn-md">See more</a>
+                    <p class="lead">Quotes That Will Give You<br> the Best Positivite Energy Boost</p>
+                    <a href="explore.html" class="btn btn-outline-dark btn-md">See more</a>
                 </div>
 
                 <div class="col-md-6 col-lg-4 py-3">
                     <img class="preview" src="img/preview3.jpg">
-                    <p class="lead">quote</p>
-                    <a href="#" class="btn btn-outline-dark btn-md">See more</a>
+                    <p class="lead">Running Low on Crack-head Energy? We've Got You Covered</p>
+                    <a href="explore.html" class="btn btn-outline-dark btn-md">See more</a>
                 </div>
 
             </div>
