--- a/hub.html
+++ b/hub.html
@@ -37,6 +37,9 @@
                                 Resources
                             </a>
                             <div class="dropdown-menu" aria-labelledby="resources_dropdown">
+                                <p class="dropdown-header special_text">
+                                    &#10087;Don't be afraid to reach out <br>
+                                    and seek professional help&#10087;</p>
                                 <a class="dropdown-item">Resources 1</a>
                                 <a class="dropdown-item">Resources 2</a>
                                 <a class="dropdown-item">Resources 3</a>
@@ -60,5 +63,51 @@
         <p>Share your happiness here</p>
 
     </div>
+
+    <!-- Start Footer -->
+    <footer>
+        <div class="container">
+            <div class="row justify-content-center text-center text-light">
+
+                <div class="col-md-9">
+                    <img src="img/logo.png" alt="logo">
+                    <p>If you ever need someone to talk to, I'm here for you. Feel free to shoot me an email anytime ☺</p>
+                
+                </div>
+                
+                <div class="col-md-4">
+                    <hr class="bg-light">
+                    <h5>Contact Info</h5>
+                    <hr class="bg-light">
+                    <p><a href="mailto:lucykw90@gmail.com">lucykw90@gmail.com</a></p>
+                    <p><a href="https://www.linkedin.com/in/lucy-wang-6153b4194/">LinkedIn</a></p>
+                    <p><a href="https://github.com/LucyWang01">GitHub</a></p>
+                    <p>New York, New York</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End Footer -->
+
+
+    <!-- Start Socket -->
+    <div class="socket text-light text-center py-4">
+        <p>&copy; <a href="#" target= "_blank">www.positivityhub.org</a></p>
+    </div>
+    <!-- End Socket -->
+
+    <!--Javascript file-->
+    <!-- jQuery -->
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Popper JS -->
+    <script src="js/popper.min.js"></script>
+    <!-- Font Awesome -->
+    <script src="js/all.min.js"></script>
+    <!--Material Library-->
+    <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+    <!-- End Script Source Files -->
+
 </body>
 </html>
