complete initial version

--- a/explore.html
+++ b/explore.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
                         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                         <li class="nav-item"><a href="explore.html" class="nav-link">Explore</a></li>
-                        <li class="nav-item"><a href="hub.html" class="nav-link">Share</a></li>
+                        <li class="nav-item"><a href="hub.html" class="nav-link">Smile Tracker</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle"  href="#" data-toggle="dropdown" data-target="resources_dropdown">
                                 Resources
@@ -40,9 +40,9 @@
                                 <p class="dropdown-header special_text">
                                     &#10087;Don't be afraid to reach out <br>
                                     and seek professional help&#10087;</p>
-                                <a class="dropdown-item">Resources 1</a>
-                                <a class="dropdown-item">Resources 2</a>
-                                <a class="dropdown-item">Resources 3</a>
+                                    <a href="https://www.nami.org/help" class="dropdown-item">NIMH Health Hotlines</a>
+                                    <a href="https://www.samhsa.gov/find-help/national-helpline" class="dropdown-item">SAMHSA National Helpline</a>
+                                    <a href="http://www.ulifeline.org/" class="dropdown-item">ULifeline College Mental Health</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -51,8 +51,8 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="contact_dropdown">
                                 <a href="mailto:lucykw90@gmail.com" class="dropdown-item">Email</a>
-                                <a class="dropdown-item" href="https://www.linkedin.com/in/lucy-wang-6153b4194/">LinkedIn</a>
-                                <a class="dropdown-item" href="https://github.com/LucyWang01">GitHub</a>
+                                <a class="dropdown-item" href="https://www.linkedin.com/in/keying-lucy-wang/">LinkedIn</a>
+                                <a class="dropdown-item" href="https://github.com/KeyingLucyWang">GitHub</a>
                             </div>
                         </li>
                     </ul>
@@ -280,7 +280,7 @@
             <div class="row justify-content-center my-1 text-center special_text">
 
                 <div class="col-md-6 col-lg-4 py-3">
-                    <img class="preview" src="img/nature/nature1.jpg">
+                    <img class="preview" src="img/nature/sunset2.jpg">
                 </div>
 
                 <div class="col-md-6 col-lg-4 py-3">
@@ -369,7 +369,7 @@
             <div class="row justify-content-center text-center text-light">
 
                 <div class="col-md-9">
-                    <img src="img/logo.png" alt="logo">
+                    <img src="img/logo_white.png" alt="logo">
                     <p>If you ever need someone to talk to, I'm here for you. Feel free to shoot me an email anytime ☺</p>
                 
                 </div>
@@ -379,8 +379,8 @@
                     <h5>Contact Info</h5>
                     <hr class="bg-light">
                     <p><a href="mailto:lucykw90@gmail.com">lucykw90@gmail.com</a></p>
-                    <p><a href="https://www.linkedin.com/in/lucy-wang-6153b4194/">LinkedIn</a></p>
-                    <p><a href="https://github.com/LucyWang01">GitHub</a></p>
+                    <p><a href="https://www.linkedin.com/in/keying-lucy-wang/">LinkedIn</a></p>
+                    <p><a href="https://github.com/KeyingLucyWang">GitHub</a></p>
                     <p>New York, New York</p>
                 </div>
             </div>
@@ -391,7 +391,7 @@
 
     <!-- Start Socket -->
     <div class="socket text-light text-center py-4">
-        <p>&copy; <a href="#" target= "_blank">www.positivityhub.org</a></p>
+        <p>&copy; <a href="https://positivityhub.org/" target= "_blank">positivityhub.org</a></p>
     </div>
     <!-- End Socket -->
 
