--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
                         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                         <li class="nav-item"><a href="explore.html" class="nav-link">Explore</a></li>
-                        <li class="nav-item"><a href="hub.html" class="nav-link">Share</a></li>
+                        <li class="nav-item"><a href="hub.html" class="nav-link">Smile Tracker</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle"  href="#" data-toggle="dropdown" data-target="resources_dropdown">
                                 Resources
@@ -53,9 +53,9 @@
                                 <p class="dropdown-header special_text">
                                     &#10087;Don't be afraid to reach out <br>
                                     and seek professional help&#10087;</p>
-                                <a class="dropdown-item">Resources 1</a>
-                                <a class="dropdown-item">Resources 2</a>
-                                <a class="dropdown-item">Resources 3</a>
+                                <a href="https://www.nami.org/help" class="dropdown-item">NIMH Health Hotlines</a>
+                                <a href="https://www.samhsa.gov/find-help/national-helpline" class="dropdown-item">SAMHSA National Helpline</a>
+                                <a href="http://www.ulifeline.org/" class="dropdown-item">ULifeline College Mental Health</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -64,8 +64,8 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="contact_dropdown">
                                 <a href="mailto:lucykw90@gmail.com" class="dropdown-item">Email</a>
-                                <a class="dropdown-item" href="https://www.linkedin.com/in/lucy-wang-6153b4194/">LinkedIn</a>
-                                <a class="dropdown-item" href="https://github.com/LucyWang01">GitHub</a>
+                                <a class="dropdown-item" href="https://www.linkedin.com/in/keying-lucy-wang/">LinkedIn</a>
+                                <a class="dropdown-item" href="https://github.com/KeyingLucyWang">GitHub</a>
                             </div>
                         </li>
                     </ul>
@@ -81,7 +81,7 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
-                    <img src="img/daisy2.jpg" class="w-100" alt="">
+                    <img src="img/daisy2.jpg" class="w-100" alt=""> <!--img/nature/nature1.jpg-->
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-end">
@@ -130,7 +130,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="img/daisy.jpg" class="w-100" alt="">
+                    <img src="img/nature1.jpg" class="w-100" alt="">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-end">
@@ -294,7 +294,7 @@
             <div class="row justify-content-center text-center text-light">
 
                 <div class="col-md-9">
-                    <img src="img/logo.png" alt="logo">
+                    <img src="img/logo_white.png" alt="logo">
                     <p>If you ever need someone to talk to, I'm here for you. Feel free to shoot me an email anytime ☺</p>
                 
                 </div>
@@ -304,8 +304,8 @@
                     <h5>Contact Info</h5>
                     <hr class="bg-light">
                     <p><a href="mailto:lucykw90@gmail.com">lucykw90@gmail.com</a></p>
-                    <p><a href="https://www.linkedin.com/in/lucy-wang-6153b4194/">LinkedIn</a></p>
-                    <p><a href="https://github.com/LucyWang01">GitHub</a></p>
+                    <p><a href="https://www.linkedin.com/in/keying-lucy-wang/">LinkedIn</a></p>
+                    <p><a href="https://github.com/KeyingLucyWang">GitHub</a></p>
                     <p>New York, New York</p>
                 </div>
             </div>
@@ -316,7 +316,7 @@
 
     <!-- Start Socket -->
     <div class="socket text-light text-center py-4">
-        <p>&copy; <a href="#" target= "_blank">www.positivityhub.org</a></p>
+        <p>&copy; <a href="https://positivityhub.org/" target= "_blank">positivityhub.org</a></p>
     </div>
     <!-- End Socket -->
 
