--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
                         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                         <li class="nav-item"><a href="explore.html" class="nav-link">Explore</a></li>
-                        <li class="nav-item"><a href="hub.html" class="nav-link">Share</a></li>
+                        <li class="nav-item"><a href="hub.html" class="nav-link">Smile Tracker</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle"  href="#" data-toggle="dropdown" data-target="resources_dropdown">
                                 Resources
@@ -40,9 +40,9 @@
                                 <p class="dropdown-header special_text">
                                     &#10087;Don't be afraid to reach out <br>
                                     and seek professional help&#10087;</p>
-                                <a class="dropdown-item">Resources 1</a>
-                                <a class="dropdown-item">Resources 2</a>
-                                <a class="dropdown-item">Resources 3</a>
+                                    <a href="https://www.nami.org/help" class="dropdown-item">NIMH Health Hotlines</a>
+                                    <a href="https://www.samhsa.gov/find-help/national-helpline" class="dropdown-item">SAMHSA National Helpline</a>
+                                    <a href="http://www.ulifeline.org/" class="dropdown-item">ULifeline College Mental Health</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -51,8 +51,8 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="contact_dropdown">
                                 <a href="mailto:lucykw90@gmail.com" class="dropdown-item">Email</a>
-                                <a class="dropdown-item" href="https://www.linkedin.com/in/lucy-wang-6153b4194/">LinkedIn</a>
-                                <a class="dropdown-item" href="https://github.com/LucyWang01">GitHub</a>
+                                <a class="dropdown-item" href="https://www.linkedin.com/in/keying-lucy-wang/">LinkedIn</a>
+                                <a class="dropdown-item" href="https://github.com/KeyingLucyWang">GitHub</a>
                             </div>
                         </li>
                     </ul>
@@ -93,7 +93,7 @@
                         2020 has been a tough one, to say the least. 
                         I was lucky enough to have a shelter and be with my family, 
                         but there have been times when negative emotions completely overwhelmed me. </p>
-                        <h5 class="bolded-text special_text text-center mb-3"><b>“ This is the most unhappiest I’ve ever been... ”</b></h5> 
+                        <h5 class="bolded-text special_text text-center mb-3"><b>“ This is the unhappiest I’ve ever been... ”</b></h5> 
                         <p>I remember thinking to myself. So trust me,</p>
                         <h4 class="bolded-text special_text text-center mb-3"><b>You are not alone in this &hearts;</b></h4> 
                 </div>
@@ -129,8 +129,22 @@
             
             </div>
         </div>
-        <p class="text-center">Under Construction... Check back later!</p>
-        <img class="rounded mx-auto d-block mb-5" src="img/self_care.jpg" width="500">
+        <div class="container about-list mb-5">
+        <!-- <div class="col-8 ordered-list text-center justify-content-center"> -->
+            <ol class="centered-list text-left justify-content-center">
+                <li class="mb-3"> Subscribe to Positivity Hub to receive daily positivity boosts!</li>
+                <li class="mb-3"> Browse the hand-picked selection of pictures and memes under Explore.</li>
+                <li class="mb-3"> Use the Smile Tracker to remind yourself of &star;everything and anything&star; positive throughout your day ☺</li>
+                <li class="mb-3"> Utilize the resources linked under Resources if you need it.</li>
+                <li class="mb-3"> Reach out and contact me if you have any sugguestions to make Positivity Hub better or if you just want to connect!</li>
+                <li class="mb-3"> Understand that during a time like this:
+                    <h5 class="bolded-text special_text text-center my-3"><b><a href="https://www.netflix.com/title/81243992">
+                        IT'S OKAY TO NOT BE OKAY 
+                        </a></b></h5>
+                    </li>
+            </ol>
+        </div>
+        <img class="rounded mx-auto d-block mb-5 text-center justify-content-center" src="img/self_care.jpg" width="500">
     </div>
 
     <!-- Start Footer -->
@@ -139,7 +153,7 @@
             <div class="row justify-content-center text-center text-light">
 
                 <div class="col-md-9">
-                    <img src="img/logo.png" alt="logo">
+                    <img src="img/logo_white.png" alt="logo">
                     <p>If you ever need someone to talk to, I'm here for you. Feel free to shoot me an email anytime ☺</p>
                 
                 </div>
@@ -149,8 +163,8 @@
                     <h5>Contact Info</h5>
                     <hr class="bg-light">
                     <p><a href="mailto:lucykw90@gmail.com">lucykw90@gmail.com</a></p>
-                    <p><a href="https://www.linkedin.com/in/lucy-wang-6153b4194/">LinkedIn</a></p>
-                    <p><a href="https://github.com/LucyWang01">GitHub</a></p>
+                    <p><a href="https://www.linkedin.com/in/keying-lucy-wang/">LinkedIn</a></p>
+                    <p><a href="https://github.com/KeyingLucyWang">GitHub</a></p>
                     <p>New York, New York</p>
                 </div>
             </div>
@@ -161,7 +175,7 @@
 
     <!-- Start Socket -->
     <div class="socket text-light text-center py-4">
-        <p>&copy; <a href="#" target= "_blank">www.positivityhub.org</a></p>
+        <p>&copy; <a href="https://positivityhub.org/" target= "_blank">positivityhub.org</a></p>
     </div>
     <!-- End Socket -->
 
