fix smile-tracker button and navigation bar highlights

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
                         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                         <li class="nav-item"><a href="explore.html" class="nav-link">Explore</a></li>
-                        <li class="nav-item"><a href="hub.html" class="nav-link">Smile Tracker</a></li>
+                        <li class="nav-item"><a href="smile_tracker.html" class="nav-link">Smile Tracker</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle"  href="#" data-toggle="dropdown" data-target="resources_dropdown">
                                 Resources
@@ -122,7 +122,7 @@
                                         Find small things around you that bring you joy.
                                         E.g. Watching the sunset and looking up at the sky in its brightest colors.
                                     </p>
-                                    <a href="#" class="btn btn-light btn-md">Smile Tracker</a>
+                                    <a href="smile_tracker.html" class="btn btn-light btn-md">Smile Tracker</a>
                                 </div>
                             </div>
                         </div>
