--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
 
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="about.html" class="nav-link active">About</a></li>
                         <li class="nav-item"><a href="explore.html" class="nav-link">Explore</a></li>
-                        <li class="nav-item"><a href="hub.html" class="nav-link">Smile Tracker</a></li>
+                        <li class="nav-item"><a href="smile_tracker.html" class="nav-link">Smile Tracker</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle"  href="#" data-toggle="dropdown" data-target="resources_dropdown">
                                 Resources
