delete extraneous code

--- a/explore.html
+++ b/explore.html
@@ -92,11 +92,6 @@
                     <img class="explore-button" src="img/button_aesthetic.jpg">
                     Nature Aesthetics</button></a>
             </div>
-            <!-- <div class="btn-group" role="group" aria-label="First group">
-                <button type="button" class="btn btn-light btn-bar">
-                    <img class="explore-button" src="img/button_story.jpg">
-                    Feel-Good Stories</button>
-            </div> -->
         </div>
 
         <!-- Animals!! -->
@@ -337,35 +332,7 @@
             
         </div>
 
-        <!-- Stories -->
-        <!-- <div class="border-top border-dark mt-2 w-80"></div>
-
-        <div class="container pb-4 special_text">
-            <h3 class="text-left ml-5 mt-5 mb-0" >Cutie Animals</h3>
-            <div class="row justify-content-center my-1 text-center special_text">
-
-                <div class="col-md-6 col-lg-4 py-3">
-                    <img class="preview" src="img/preview1.jpg">
-                    <a href="#" class="btn btn-outline-dark btn-md">title1</a>
-                </div>
-
-                <div class="col-md-6 col-lg-4 py-3">
-                    <img class="preview" src="img/preview2.jpg">
-                    <a href="#" class="btn btn-outline-dark btn-md">title2</a>
-                </div>
-
-                <div class="col-md-6 col-lg-4 py-3">
-                    <img class="preview" src="img/preview3.jpg">
-                    <a href="#" class="btn btn-outline-dark btn-md">title3</a>
-                </div>
-
-            </div>
-
-            <div class="text-center my-3">
-                <a href="explore.html" class="btn btn-outline-dark btn-lg text-center">Back to Top</a>
-            </div> -->
-            
-        </div>
+        <!-- </div> -->
 
     <!-- End Navigation Sticky -->
     </div>
